# fantune-skin

./: .gitignore  CMakeLists.txt  FanTuneLookAndFeel.h  demo.html  index-nodaw.html  index.html  robots.txt  sitemap.xml
Source/: FanTuneChopEngine.h  FanTuneDSP.h  FanTuneLookAndFeel.h  FanTunePitchDetector.h  FanTunePresetManager.cpp  FanTunePresetManager.h  FanTuneUIComponents.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
chronos-weaver/: index.html
nodaw-racks/: index.html
presets/: Bedroom Box Fan.fantune  Box Fan High.fantune  Hurricane Box Fan.fantune  Subtle Draft.fantune  T-Pain Breeze.fantune
references/: CALIBRATION_MODE_UI_SPEC.md  CAPTURE_PROTOCOL.md  FanTuneProfile.schema.json  SCORING_METRICS.md
repair-it/: index.html
resources/installer/: license.txt  readme.txt
scripts/: build-and-package.bat  build-and-package.sh  install-fantune.ps1  install-fantune.sh
time-stretch-x/: index.html
tools/: analyze_fan_profile.py  capture_shots.py  generate_factory_presets.py  generate_installer_assets.py  take_screenshots.py
