cmake_minimum_required(VERSION 3.22)

project(FanTune VERSION 1.0.0
    DESCRIPTION "Spectral Fan Modulator VST3/CLAP/AU Plugin"
    HOMEPAGE_URL "https://fantune.app"
    LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ── JUCE ─────────────────────────────────────────────────────────────────────
add_subdirectory(C:/JUCE JUCE)

# ── Plugin formats ────────────────────────────────────────────────────────────
set(FANTUNE_FORMATS VST3 Standalone CLAP)
if(APPLE)
    list(APPEND FANTUNE_FORMATS AU)
endif()

juce_add_plugin(FanTune
    COMPANY_NAME "FanTune"
    PLUGIN_MANUFACTURER_CODE Fntn
    PLUGIN_CODE Fnt1
    FORMATS ${FANTUNE_FORMATS}
    PRODUCT_NAME "FanTune"
    IS_SYNTH FALSE
    NEEDS_MIDI_INPUT TRUE
    NEEDS_MIDI_OUTPUT FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS FALSE
    COPY_PLUGIN_AFTER_BUILD FALSE
    VST3_CATEGORIES Fx Modulation PitchShift)

juce_generate_juce_header(FanTune)

target_sources(FanTune
    PRIVATE
        Source/PluginProcessor.cpp
        Source/PluginEditor.cpp
        Source/FanTunePresetManager.cpp)

target_compile_definitions(FanTune
    PUBLIC
        JUCE_WEB_BROWSER=0
        JUCE_USE_CURL=0
        JUCE_VST3_CAN_REPLACE_VST2=0
        JUCE_DISPLAY_SPLASH_SCREEN=0)

target_include_directories(FanTune PRIVATE Source)

target_link_libraries(FanTune
    PRIVATE
        juce::juce_audio_utils
        juce::juce_dsp
    PUBLIC
        juce::juce_recommended_config_flags
        juce::juce_recommended_lto_flags
        juce::juce_recommended_warning_flags)

# ── CLAP extension ───────────────────────────────────────────────────────────
add_subdirectory(libs/clap-juce-extensions EXCLUDE_FROM_ALL)

clap_juce_extensions_plugin(TARGET FanTune
    CLAP_ID "com.fantune.fantune"
    CLAP_FEATURES audio-effect pitch-shifter distortion)

# ── Platform-agnostic artefact directory ──────────────────────────────────────
# JUCE places built plugins in:
#   ${CMAKE_BINARY_DIR}/FanTune_artefacts/${CMAKE_BUILD_TYPE}/
# For multi-config generators (VS, Xcode) fall back to Release.
if(CMAKE_BUILD_TYPE)
    set(FANTUNE_ARTEFACTS "${CMAKE_BINARY_DIR}/FanTune_artefacts/${CMAKE_BUILD_TYPE}")
else()
    set(FANTUNE_ARTEFACTS "${CMAKE_BINARY_DIR}/FanTune_artefacts/Release")
endif()

# ── Factory presets ──────────────────────────────────────────────────────────
# Generated by tools/generate_factory_presets.py before building.
# Install to a platform-appropriate shared data directory.
include(GNUInstallDirs)

if(WIN32)
    set(FANTUNE_PRESET_DEST "${CMAKE_INSTALL_DATADIR}/FanTune/Presets")
elseif(APPLE)
    set(FANTUNE_PRESET_DEST "${CMAKE_INSTALL_DATADIR}/FanTune/Presets")
else()
    set(FANTUNE_PRESET_DEST "${CMAKE_INSTALL_DATADIR}/fantune/presets")
endif()

# ── Install targets ───────────────────────────────────────────────────────────
# Each format installs to its platform-standard location.
# Components: vst3, clap, au (macOS), standalone, presets, dev (docs/license)

# ── VST3 ──
if(WIN32)
    install(DIRECTORY "${FANTUNE_ARTEFACTS}/VST3/FanTune.vst3"
            DESTINATION "Common Files/VST3"
            COMPONENT vst3
            USE_SOURCE_PERMISSIONS)
elseif(APPLE)
    install(DIRECTORY "${FANTUNE_ARTEFACTS}/VST3/FanTune.vst3"
            DESTINATION "/Library/Audio/Plug-Ins/VST3"
            COMPONENT vst3
            USE_SOURCE_PERMISSIONS)
else()
    install(DIRECTORY "${FANTUNE_ARTEFACTS}/VST3/FanTune.vst3"
            DESTINATION "${CMAKE_INSTALL_FULL_LIBDIR}/vst3"
            COMPONENT vst3
            USE_SOURCE_PERMISSIONS)
endif()

# ── CLAP ──
if(WIN32)
    install(FILES "${FANTUNE_ARTEFACTS}/CLAP/FanTune.clap"
            DESTINATION "Common Files/CLAP"
            COMPONENT clap)
elseif(APPLE)
    install(FILES "${FANTUNE_ARTEFACTS}/CLAP/FanTune.clap"
            DESTINATION "/Library/Audio/Plug-Ins/CLAP"
            COMPONENT clap)
else()
    install(FILES "${FANTUNE_ARTEFACTS}/CLAP/FanTune.clap"
            DESTINATION "${CMAKE_INSTALL_FULL_LIBDIR}/clap"
            COMPONENT clap)
endif()

# ── AU (macOS only) ──
if(APPLE)
    install(DIRECTORY "${FANTUNE_ARTEFACTS}/AU/FanTune.component"
            DESTINATION "/Library/Audio/Plug-Ins/Components"
            COMPONENT au
            USE_SOURCE_PERMISSIONS)
endif()

# ── Standalone ──
if(WIN32)
    install(PROGRAMS "${FANTUNE_ARTEFACTS}/Standalone/FanTune.exe"
            DESTINATION "."
            COMPONENT standalone)
elseif(APPLE)
    install(DIRECTORY "${FANTUNE_ARTEFACTS}/Standalone/FanTune.app"
            DESTINATION "/Applications"
            COMPONENT standalone
            USE_SOURCE_PERMISSIONS)
else()
    install(PROGRAMS "${FANTUNE_ARTEFACTS}/Standalone/fantune"
            DESTINATION "${CMAKE_INSTALL_FULL_BINDIR}"
            COMPONENT standalone)
endif()

# ── Factory presets ──
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/presets")
    file(GLOB FANTUNE_PRESETS "${CMAKE_CURRENT_SOURCE_DIR}/presets/*.fantune")
    install(FILES ${FANTUNE_PRESETS}
            DESTINATION "${FANTUNE_PRESET_DEST}"
            COMPONENT presets)
endif()

# ── License & readme ──
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/resources/installer/license.txt"
        DESTINATION "${CMAKE_INSTALL_DOCDIR}"
        COMPONENT dev
        RENAME "LICENSE.txt")

install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/resources/installer/readme.txt"
        DESTINATION "${CMAKE_INSTALL_DOCDIR}"
        COMPONENT dev
        RENAME "README.txt")

# ══════════════════════════════════════════════════════════════════════════════
# CPACK — Cross-Platform Packaging
# ══════════════════════════════════════════════════════════════════════════════
set(CPACK_PACKAGE_NAME "FanTune")
set(CPACK_PACKAGE_VENDOR "FanTune")
set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Spectral Fan Modulator — Authentic box-fan vocal effect.")
set(CPACK_PACKAGE_HOMEPAGE_URL "https://fantune.app")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/resources/installer/license.txt")
set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/resources/installer/readme.txt")

# Component packaging — allow per-format installation
set(CPACK_COMPONENTS_ALL vst3 clap standalone presets)
if(APPLE)
    list(APPEND CPACK_COMPONENTS_ALL au)
endif()

set(CPACK_COMPONENT_VST3_DESCRIPTION "FanTune VST3 plugin")
set(CPACK_COMPONENT_CLAP_DESCRIPTION "FanTune CLAP plugin")
set(CPACK_COMPONENT_AU_DESCRIPTION "FanTune Audio Unit (macOS)")
set(CPACK_COMPONENT_STANDALONE_DESCRIPTION "FanTune standalone audio application")
set(CPACK_COMPONENT_PRESETS_DESCRIPTION "FanTune factory presets")

# ── NSIS installer branding ──────────────────────────────────────────────
# NOTE: CPACK_PACKAGE_ICON is NOT set — the C++ generator writes
#       !define MUI_HEADERIMAGE_BITMAP (not MUI_ICON) when it sees it.
#       We route all branding through explicit CPACK_NSIS_INSTALLER_*_CODE
#       variables.
#
set(CPACK_NSIS_INSTALLER_ICON_CODE
    "  !define MUI_ICON '${CMAKE_CURRENT_SOURCE_DIR}/resources/installer/FanTune.ico'\n  !define MUI_UNICON '${CMAKE_CURRENT_SOURCE_DIR}/resources/installer/FanTune.ico'")
set(CPACK_NSIS_INSTALLER_MUI_ICON_CODE
    "  !define /redef MUI_HEADERIMAGE_BITMAP 'header.bmp'")
set(CPACK_NSIS_INSTALLER_MUI_WELCOMEFINISH_CODE
    "  !define /redef MUI_WELCOMEFINISHPAGE_BITMAP 'welcome.bmp'")
set(CPACK_NSIS_INSTALLER_MUI_FINISHPAGE_RUN_CODE
    "  !define MUI_FINISHPAGE_RUN '$INSTDIR/FanTune.exe'\n  !define MUI_FINISHPAGE_RUN_TEXT 'Launch FanTune Standalone'\n  !define MUI_FINISHPAGE_LINK 'Visit FanTune website'\n  !define MUI_FINISHPAGE_LINK_LOCATION 'https://fantune.app'")

# ── Windows: NSIS installer ─────────────────────────────────────────────────
if(WIN32)
    find_program(NSIS_MAKENSIS makensis
        PATHS "C:/Program Files (x86)/NSIS" "C:/Program Files (x86)/NSIS/Bin"
        NO_DEFAULT_PATH)

    if(NSIS_MAKENSIS)
        set(CPACK_NSIS_EXECUTABLE "${NSIS_MAKENSIS}")
    endif()

    set(CPACK_GENERATOR "NSIS" CACHE STRING "CPack generator for Windows")

    set(CPACK_PACKAGE_INSTALL_DIRECTORY "FanTune")
    set(CPACK_NSIS_DISPLAY_NAME "FanTune ${PROJECT_VERSION}")
    set(CPACK_NSIS_PACKAGE_NAME "FanTune")
    set(CPACK_NSIS_INSTALL_ROOT "$PROGRAMFILES64")
    set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
    set(CPACK_NSIS_MODIFY_PATH OFF)
    set(CPACK_NSIS_CREATE_ICONS_EXTRA
        "CreateShortCut '$SMPROGRAMS\\\\$STARTMENU_FOLDER\\\\FanTune.lnk' '$INSTDIR\\\\FanTune.exe'"
        "CreateShortCut '$SMPROGRAMS\\\\$STARTMENU_FOLDER\\\\Uninstall FanTune.lnk' '$INSTDIR\\\\Uninstall.exe'")

    # CPack/NSIS on Windows identifies components by their DESTINATION prefix
    set(CPACK_NSIS_INSTALL_ROOT "$PROGRAMFILES64")

    # When building via CPack, the install prefix maps to CPACK_PACKAGE_INSTALL_DIRECTORY
    # DESTINATION "Common Files/VST3" gets placed relative to $PROGRAMFILES64
    # which is correct for NSIS.

# ── macOS: DragNDrop DMG + optional PackageMaker ────────────────────────────
elseif(APPLE)
    set(CPACK_GENERATOR "DragNDrop" CACHE STRING "CPack generator for macOS")

    set(CPACK_DMG_VOLUME_NAME "FanTune ${PROJECT_VERSION}")
    set(CPACK_DMG_FORMAT "UDBZ")
    set(CPACK_DMG_DS_STORE_SETUP_SCRIPT "")

    # PackageMaker (productbuild) for distribution-ready PKG
    find_program(PACKAGEMAKER pkgbuild)
    if(PACKAGEMAKER)
        set(CPACK_GENERATOR "${CPACK_GENERATOR};productbuild")
    endif()

    set(CPACK_OSX_PACKAGE_VERSION "${CMAKE_OSX_DEPLOYMENT_TARGET}")

    # Component install: Application + system plugin directories
    set(CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE
        GROUP_READ WORLD_READ)

# ── Linux: DEB, RPM, TGZ ────────────────────────────────────────────────────
else()
    # Auto-detect available package generators
    set(CPACK_GENERATOR "TGZ" CACHE STRING "CPack generators for Linux")

    # If dpkg-deb is found, add DEB
    find_program(DPKG_DEB dpkg-deb)
    if(DPKG_DEB)
        set(CPACK_GENERATOR "${CPACK_GENERATOR};DEB")
    endif()

    # If rpmbuild is found, add RPM
    find_program(RPMBUILD rpmbuild)
    if(RPMBUILD)
        set(CPACK_GENERATOR "${CPACK_GENERATOR};RPM")
    endif()

    # Deb-specific
    set(CPACK_DEBIAN_PACKAGE_SECTION "sound")
    set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
    set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
    set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://fantune.app")
    set(CPACK_DEBIAN_PACKAGE_CONTROL_STRICT_PERMISSION ON)
    set(CPACK_DEB_COMPONENT_INSTALL OFF)

    # Put everything under /usr for DEB
    set(CPACK_SET_DESTDIR ON)
    set(CPACK_INSTALL_PREFIX "/usr")

    # RPM-specific
    set(CPACK_RPM_PACKAGE_GROUP "Sound")
    set(CPACK_RPM_PACKAGE_LICENSE "Proprietary")
    set(CPACK_RPM_PACKAGE_URL "https://fantune.app")
    set(CPACK_RPM_COMPONENT_INSTALL OFF)

    # TGZ: use a staging prefix
    set(CPACK_COMPONENTS_GROUPING "ALL_COMPONENTS_IN_ONE")
endif()

# ── Archive name ─────────────────────────────────────────────────────────────
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
string(TOLOWER "${CPACK_PACKAGE_FILE_NAME}" CPACK_PACKAGE_FILE_NAME)

# ── Finalize CPack ───────────────────────────────────────────────────────────
include(CPack)
